force-app/main/default/objects/Contact/fields/Onboarding_Tour_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Tour_Date__c</fullName>
    <description>OneHub: Date, when user finished onboarding tour in OneHub Community. (US-4589)</description>
    <inlineHelpText>Indicates the date and time user completed the onboarding tour on the OneHub community.</inlineHelpText>
    <label>Onboarding Tour Date</label>
    <type>DateTime</type>
</CustomField>