force-app/main/default/objects/Contact/fields/OSB_Community_Access_Manager__c.field-meta.xml
<CustomField>
    <fullName>OSB_Community_Access_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OneHub: This field is used to store who the Authorised Person or Designated Person is that sent the user an invite to sign up for the OneHub Community. (US-4589)</description>
    <inlineHelpText>Contact that is responsible for the access for the OneHub community</inlineHelpText>
    <label>Community Access Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Community Access manager</relationshipLabel>
    <relationshipName>Community_access_manager</relationshipName>
    <type>Lookup</type>
</CustomField>