force-app/main/default/objects/Contact/fields/OSB_Community_Access_Role__c.field-meta.xml
<CustomField>
    <fullName>OSB_Community_Access_Role__c</fullName>
    <description>OneHub: This field is used to store the Role that a Client user has on the OneHub Community.(US-4589)</description>
    <inlineHelpText>Role of the client on the OneHub community</inlineHelpText>
    <label>Community Access Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorised Person</fullName>
            </value>
            <value>
                <fullName>Designated Person</fullName>
            </value>
            <value>
                <fullName>Nominated Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>