force-app/main/default/objects/Contact/fields/OSB_Community_Access_Status__c.field-meta.xml
<CustomField>
    <fullName>OSB_Community_Access_Status__c</fullName>
    <description>OneHub: This field is used to store the status of the users access to the OneHub Community.(US-4589)</description>
    <label>Community Access Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invite Sent</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>