force-app/main/default/objects/Contact/fields/OSB_Company_name__c.field-meta.xml
<CustomField>
    <fullName>OSB_Company_name__c</fullName>
    <description>OneHub: Company name for the client to be used on OneHub Community. (US-4589)</description>
    <inlineHelpText>Company Name for the Client used to update Ping</inlineHelpText>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>