force-app/main/default/objects/Contact/fields/OSB_Contact_Re_invited__c.field-meta.xml
<CustomField>
    <fullName>OSB_Contact_Re_invited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OneHub: This field is used to indicate whether or not a user has been re-invited to OneHub. (SGPRT-1731)</description>
    <inlineHelpText>True if the user has been re-invited to Salesforce.</inlineHelpText>
    <label>Contact Re-invited</label>
    <type>Checkbox</type>
</CustomField>