force-app/main/default/objects/Contact/fields/OSB_ContactCountry__c.field-meta.xml
<CustomField>
    <fullName>OSB_ContactCountry__c</fullName>
    <label>Contact Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>