force-app/main/default/objects/Contact/fields/OSB_Date_Invite_Resent__c.field-meta.xml
<CustomField>
    <fullName>OSB_Date_Invite_Resent__c</fullName>
    <description>OneHub: This field is used to store the Date and Time the invite to sign up to the OneHub Community was resent to the user. (US-4589)</description>
    <label>Date Invite Resent</label>
    <type>DateTime</type>
</CustomField>