force-app/main/default/objects/Contact/fields/OSB_Date_Invite_Sent__c.field-meta.xml
<CustomField>
    <fullName>OSB_Date_Invite_Sent__c</fullName>
    <description>OneHub: This field is used to store the Date and Time the invite to sign up to the OneHub Community was sent to the user. (US-4589)</description>
    <label>Date Invite Sent</label>
    <type>DateTime</type>
</CustomField>