force-app/main/default/objects/Contact/fields/OSB_Expire_Sign_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>OSB_Expire_Sign_Up_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OneHub: This field is used to expire the sign up link sent to users. (SGPRT-2300)</description>
    <inlineHelpText>Indicates that the sign up link is now expired and user can no longer access it.</inlineHelpText>
    <label>Expire Sign Up Link</label>
    <type>Checkbox</type>
</CustomField>