force-app/main/default/objects/Contact/fields/OSB_HideMFA__c.field-meta.xml
<CustomField>
    <fullName>OSB_HideMFA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OneHub: This field is used to not to show the Multi factor authentication registration modal on dashboard.(SGPRT-2614)</description>
    <inlineHelpText>Onehub user opted out to see Multi-factor Authentication registration prompt on dashboard.</inlineHelpText>
    <label>Hide MFA</label>
    <type>Checkbox</type>
</CustomField>