force-app/main/default/objects/Contact/fields/OSB_IsCommunityUser__c.field-meta.xml
<CustomField>
    <fullName>OSB_IsCommunityUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OneHub: Used to check if this contact is a community user. (US-4589)</description>
    <inlineHelpText>Checked if the contact belongs to a community user</inlineHelpText>
    <label>Community User</label>
    <type>Checkbox</type>
</CustomField>