force-app/main/default/objects/Contact/fields/OSB_Operating_Country__c.field-meta.xml
<CustomField>
    <fullName>OSB_Operating_Country__c</fullName>
    <description>This field is used to define a OneHub user&apos;s Operating Country/s which will drive visibility of Solutions &amp; API&apos;s on the users dashboard.</description>
    <inlineHelpText>Which country/s does the user operating in?</inlineHelpText>
    <label>Operating Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OSB_Operating_Country</valueSetName>
    </valueSet>
</CustomField>