force-app/main/default/objects/Contact/fields/OSB_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>OSB_Passport_Number__c</fullName>
    <description>OneHub: This field stores the Community users Passport Number. (US-4589)</description>
    <inlineHelpText>Clients Passport Number</inlineHelpText>
    <label>Passport Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>