force-app/main/default/objects/Contact/fields/OSB_Persona__c.field-meta.xml
<CustomField>
    <fullName>OSB_Persona__c</fullName>
    <description>This field is used to define a OneHub user&apos;s Persona which will drive visibility of Solutions &amp; API&apos;s on the users dashboard.</description>
    <formula>IF( Account.Name = &apos;Standard Bank Employees&apos;, &apos;Staff&apos;, &apos;Client&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What is the persona of this user? IE staff or client</inlineHelpText>
    <label>Persona</label>
    <type>Text</type>
</CustomField>