force-app/main/default/objects/Contact/fields/OSB_Team_Profile_Onboarding_Tour_Date__c.field-meta.xml
<CustomField>
    <fullName>OSB_Team_Profile_Onboarding_Tour_Date__c</fullName>
    <description>OneHub: This field is used to store the Date &amp; Time a user has completed the Team Profile onboarding tour on the OneHub Community</description>
    <inlineHelpText>Indicates the Date &amp; Time the user has completed the Team Profile onboarding tour</inlineHelpText>
    <label>Team Profile Onboarding Tour Date</label>
    <type>DateTime</type>
</CustomField>