force-app/main/default/objects/Contact/fields/OSB_User_Access_Approved__c.field-meta.xml
<CustomField>
    <fullName>OSB_User_Access_Approved__c</fullName>
    <description>OneHub: This field is used to store the Date and Time the users access to the OneHub Community was approved by their Community Access Manager. (US-4589)</description>
    <label>User Access Approved</label>
    <type>DateTime</type>
</CustomField>