force-app/main/default/objects/Contact/fields/OSB_User_Sign_Up_Complete__c.field-meta.xml
<CustomField>
    <fullName>OSB_User_Sign_Up_Complete__c</fullName>
    <description>OneHub: This field is used to store the Date and Time the user  completed their sign up for the OneHub Community. (US-4589)</description>
    <label>User Sign Up Complete</label>
    <type>DateTime</type>
</CustomField>