force-app/main/default/objects/Contact/fields/PBB_External_ID__c.field-meta.xml
<CustomField>
    <fullName>PBB_External_ID__c</fullName>
    <description>A Salesforce Identifier for PBB clients, US-4334</description>
    <externalId>true</externalId>
    <label>PBB External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>