force-app/main/default/objects/Contact/fields/Personal_Banking__c.field-meta.xml
<CustomField>
    <fullName>Personal_Banking__c</fullName>
    <label>Personal Banking</label>
    <length>50</length>
    <type>Text</type>
</CustomField>