force-app/main/default/objects/Contact/fields/Ping_Id__c.field-meta.xml
<CustomField>
    <fullName>Ping_Id__c</fullName>
    <description>OneHub: Ping Integration Identity Number. (US-4589)</description>
    <externalId>true</externalId>
    <inlineHelpText>Used for the Ping Integration</inlineHelpText>
    <label>Ping ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>