force-app/main/default/objects/Contact/fields/PIP__c.field-meta.xml
<CustomField>
    <fullName>PIP__c</fullName>
    <description>Politicaly Influencial Person, US-4334</description>
    <label>PIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>