force-app/main/default/objects/Contact/fields/Reason_for_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Inactive__c</fullName>
    <description>Reason as to why a Contact is Inactive on Salesforce</description>
    <label>Reason for Inactive</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Inactive__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Client Inactive</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Internal Transfer</fullName>
            </value>
            <value>
                <fullName>Resigned</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Retrenched</fullName>
            </value>
            <value>
                <fullName>Previous Owner Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>