force-app/main/default/objects/Contact/fields/Relationship_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Group_Number__c</fullName>
    <label>Relationship Group Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>