force-app/main/default/objects/Contact/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>Type of relationship Standard Bank has with this specific contact.</description>
    <inlineHelpText>An indication as to the level of the relationship that Standard Bank has with the client contact</inlineHelpText>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>To Be Established</fullName>
            </value>
            <value>
                <fullName>To Be Strengthened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>