force-app/main/default/objects/Contact/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>Bahá&apos;í</fullName>
            </value>
            <value>
                <fullName>Jewish</fullName>
            </value>
            <value>
                <fullName>No Religion</fullName>
            </value>
            <value>
                <fullName>Atheist</fullName>
            </value>
            <value>
                <fullName>Values to be provided by SA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>