force-app/main/default/objects/Contact/fields/SA_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>SA_Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Afrikaans</fullName>
            </value>
            <value>
                <fullName>Akan</fullName>
            </value>
            <value>
                <fullName>Albanian</fullName>
            </value>
            <value>
                <fullName>Algerian</fullName>
            </value>
            <value>
                <fullName>Amharic</fullName>
            </value>
            <value>
                <fullName>American Sign Language</fullName>
            </value>
            <value>
                <fullName>Anuak</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Ashanti</fullName>
            </value>
            <value>
                <fullName>Assyrian</fullName>
            </value>
            <value>
                <fullName>Azerbaijani</fullName>
            </value>
            <value>
                <fullName>Badini</fullName>
            </value>
            <value>
                <fullName>Bajuni</fullName>
            </value>
            <value>
                <fullName>Bambara</fullName>
            </value>
            <value>
                <fullName>Basque</fullName>
            </value>
            <value>
                <fullName>Behdini</fullName>
            </value>
            <value>
                <fullName>Belorussian</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Berber</fullName>
            </value>
            <value>
                <fullName>Bosnian</fullName>
            </value>
            <value>
                <fullName>Bulgarian</fullName>
            </value>
            <value>
                <fullName>Burmese</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Catalan</fullName>
            </value>
            <value>
                <fullName>Chaldean</fullName>
            </value>
            <value>
                <fullName>Chaochow</fullName>
            </value>
            <value>
                <fullName>Chamorro</fullName>
            </value>
            <value>
                <fullName>Chavacano</fullName>
            </value>
            <value>
                <fullName>Chuukese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>