force-app/main/default/objects/Contact/fields/Singletrack_Name_and_Number__c.field-meta.xml
<CustomField>
    <fullName>Singletrack_Name_and_Number__c</fullName>
    <description>Merge field for Research Templates to display Analyst name and number</description>
    <formula>FirstName + &apos; &apos; + LastName + &apos; &apos; + (Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name and Number</label>
    <type>Text</type>
</CustomField>