force-app/main/default/objects/Contact/fields/Singletrack_Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Singletrack_Preferred_Name__c</fullName>
    <description>Singletrack Sales contact preferred name</description>
    <label>Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>