force-app/main/default/objects/Contact/fields/Singletrack_Research_Contact__c.field-meta.xml
<CustomField>
    <fullName>Singletrack_Research_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box for Singletrack Research and Sales contacts</description>
    <label>Research Contact</label>
    <type>Checkbox</type>
</CustomField>