force-app/main/default/objects/Contact/fields/SingletrackCMS__AccessPass_Browser_Types__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__AccessPass_Browser_Types__c</fullName>
    <label>DEPRECATED - AccessPass Browser Types</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>