force-app/main/default/objects/Contact/fields/SingletrackCMS__AccessPass_Count__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__AccessPass_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DEPRECATED - AccessPass Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>