force-app/main/default/objects/Contact/fields/SingletrackCMS__AccessPass_Encoded__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__AccessPass_Encoded__c</fullName>
    <label>DEPRECATED - AccessPass Encoded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>