force-app/main/default/objects/Contact/fields/SingletrackCMS__AccessPass_Expiry__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__AccessPass_Expiry__c</fullName>
    <defaultValue>TODAY() + 180</defaultValue>
    <label>DEPRECATED - AccessPass Expiry</label>
    <type>Date</type>
</CustomField>