force-app/main/default/objects/Contact/fields/SingletrackCMS__AccessPass_IPs__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__AccessPass_IPs__c</fullName>
    <label>DEPRECATED - AccessPass IPs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>