force-app/main/default/objects/Contact/fields/SingletrackCMS__AccessPass_User__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__AccessPass_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEPRECATED - AccessPass User</label>
    <type>Checkbox</type>
</CustomField>