force-app/main/default/objects/Contact/fields/SingletrackCMS__Account_MAR_Email__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Account_MAR_Email__c</fullName>
    <formula>Account.SingletrackCMS__MAR_Email__c</formula>
    <label>Account MAR Email Address</label>
    <type>Text</type>
</CustomField>