force-app/main/default/objects/Contact/fields/SingletrackCMS__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Account_Name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>