force-app/main/default/objects/Contact/fields/SingletrackCMS__Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Account_Tier__c</fullName>
    <formula>TEXT(Account.SingletrackCMS__Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Tier</label>
    <type>Text</type>
</CustomField>