force-app/main/default/objects/Contact/fields/SingletrackCMS__Active__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Active</label>
    <type>Checkbox</type>
</CustomField>