force-app/main/default/objects/Contact/fields/SingletrackCMS__Address__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SingletrackCMS__Address__c.SingletrackCMS__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>SingletrackCMS__Address__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>