force-app/main/default/objects/Contact/fields/SingletrackCMS__Address_City__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Address_City__c</fullName>
    <formula>SingletrackCMS__Address__r.SingletrackCMS__City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address City</label>
    <type>Text</type>
</CustomField>