force-app/main/default/objects/Contact/fields/SingletrackCMS__Address_Country__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Address_Country__c</fullName>
    <formula>SingletrackCMS__Address__r.SingletrackCMS__Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Country</label>
    <type>Text</type>
</CustomField>