force-app/main/default/objects/Contact/fields/SingletrackCMS__Address_County__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Address_County__c</fullName>
    <formula>SingletrackCMS__Address__r.SingletrackCMS__County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address County</label>
    <type>Text</type>
</CustomField>