force-app/main/default/objects/Contact/fields/SingletrackCMS__Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Address_Line_1__c</fullName>
    <formula>SingletrackCMS__Address__r.SingletrackCMS__Line_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line 1</label>
    <type>Text</type>
</CustomField>