force-app/main/default/objects/Contact/fields/SingletrackCMS__Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Address_Line_2__c</fullName>
    <formula>SingletrackCMS__Address__r.SingletrackCMS__Line_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line 2</label>
    <type>Text</type>
</CustomField>