force-app/main/default/objects/Contact/fields/SingletrackCMS__Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Address_Postal_Code__c</fullName>
    <formula>SingletrackCMS__Address__r.SingletrackCMS__Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Postal Code</label>
    <type>Text</type>
</CustomField>