force-app/main/default/objects/Contact/fields/SingletrackCMS__Analytics_Auto_Downloader_Date__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Analytics_Auto_Downloader_Date__c</fullName>
    <label>Analytics Auto Downloader Date</label>
    <type>DateTime</type>
</CustomField>