force-app/main/default/objects/Contact/fields/SingletrackCMS__Analytics_Detected_Forwarder__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Analytics_Detected_Forwarder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analytics Detected Forwarder</label>
    <type>Checkbox</type>
</CustomField>