force-app/main/default/objects/Contact/fields/SingletrackCMS__Analytics_Historic_Research__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Analytics_Historic_Research__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analytics Historic Research</label>
    <type>Checkbox</type>
</CustomField>