force-app/main/default/objects/Contact/fields/SingletrackCMS__Analytics_Historic_Research_Date__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Analytics_Historic_Research_Date__c</fullName>
    <label>Analytics Historic Research Date</label>
    <type>DateTime</type>
</CustomField>