force-app/main/default/objects/Contact/fields/SingletrackCMS__Analytics_Show_Time_To_Call__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Analytics_Show_Time_To_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analytics Show Time To Call</label>
    <type>Checkbox</type>
</CustomField>