force-app/main/default/objects/Contact/fields/SingletrackCMS__App_AccessPass_Browser_Types__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__App_AccessPass_Browser_Types__c</fullName>
    <label>DEPRECATED - App AP Browser Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>