force-app/main/default/objects/Contact/fields/SingletrackCMS__App_AccessPass_Expiry__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__App_AccessPass_Expiry__c</fullName>
    <label>DEPRECATED - App AccessPass Expiry</label>
    <type>Date</type>
</CustomField>